# MCP-Client

./: .gitignore  README.md  client.py  openrouter.py  pyproject.toml  system_prompt_temp.txt
config/: __init__.py  config.py  schema_default.py
llm/: __init__.py
